test/error/scan/ExpectHOrX.mod
MODULE ExpectHOrX;

CONST n = 0AB;

END ExpectHOrX.
